--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 playPause: false,
                 restart: false,
                 mute: false,
-                settings: false,
-                fullscreen: true,
+                settings: true,
+                fullscreen: false,
                 saveState: false,
                 loadState: false,
                 screenRecord: false,
@@ -27,18 +27,20 @@
                 quickSave: false,
                 quickLoad: false,
                 screenshot: false,
-                cacheManager: false
+                cacheManager: false,
+                contextMenuButton: false,
             }
             EJS_player = "#game";
             EJS_core = "arcade";
             EJS_gameName = "test";
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
-            EJS_pathtodata = "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
+            // EJS_pathtodata = "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
+            EJS_pathtodata = "/data/";
             EJS_gameUrl = "./kof97.zip";
             // EJS_biosUrl = "neogeo.zip";
             EJS_biosUrl = "./arcade.zip";
         </script>
-        <script src="https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/loader.js"></script>
+        <script src="/data/loader.js"></script>
     </body>
 </html>
